1.8.5
-----
1. Fix fill of bottom corners of kwin decoration when not compositing.
2. Fix sunken left background of kwin decoration when not compositing.
3. Don't force toolbar icons to be square.
4. Fix drag issue with MusicScore.
5. Don't use gradient alpha settings for tooltips.

1.8.4
-----
1. Fix saving of custom alpha values.
2. Fix crash upon exit - due to double free.

1.8.3
-----
1. Fix import of ZIP qtcurve files.
2. Fix display of background images, etc, in embedded preview.
3. Fix QMake compile - thanks, once again, to Hugues Delorme.

1.8.2
-----
 1. When hiding shortcuts, only show these if widget is enabled.
 2. Don't draw titlebar button frame for menu button if this is where the
    window icon is to be. This was already the case for circular buttons,
    but not for square buttons.
 3. If drawing sunken background behind titlebar buttons, need to reduce size
    of square buttons. This already happens for circular buttons.
 4. Don't draw sunken background around icon based menu button, if it is the
    only button on the left/right.
 5. Draw menubar and statusbar kwin toggle buttons square if using square
    titlebar buttons.
 6. Draw box around checked Libre/Open Office menu checkboxes.
 7. Ukrainian translation - thanks to Yuri Chornoivan
 8. Slight drawing fix for square scrollviews.
 9. When compiled against KDE, react to style changes.
10. Slightly clean-up code.

1.8.1
-----
1. Safer handling of hidden shortcut underscore in popup menus. Only keep
   track of menu widget, not its ancestors.
2. If hiding keyboard shortcut underlines: Keep track of open popup menus,
   and only show keyboard short cut for the current one.
3. Fix corrupted menus when using a gradient that uses an alpha of less than
   100.

1.8.0
-----
1. Add option to not display keyboard shortcurt underline until 'Alt' is
   pressed.
2. Add options to specify appearance of toolbar buttons.
3. Allow to use popup menu shade factor when colouring as per menubar.